@@ -1,3 +1,13 @@
+2005-11-04  Vincent Noel <vnoel@cox.net>
+
+	* log_repaint.c: (model_fill_date_iter):
+	* logview-findbar.c: (iter_is_visible),
+	(logview_findbar_entry_changed_cb), (logview_findbar_hide),
+	(logview_findbar_new):
+	* logview.c: (logview_init):
+	* logview.h: Remove the whole Find bar mess (which never worked
+	well anyway) with a nice and fast filter.
+
 2005-11-04  Vincent Noel  <vnoel@cox.net>
 
 	* logview.c: (logview_add_logs_from_names), (logview_save_prefs),
